[package]
name = "comms"
version = "0.1.0"
authors = ["Richard A <37155328+UY-Scuti-Real@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"

[[bin]]
name = "server"
path = "src/bin/server_test.rs"

[[bin]]
name = "client"
path = "src/bin/client_test.rs"
